[gd_scene load_steps=4 format=3 uid="uid://dsg55mejcqgyb"]

[ext_resource type="Script" uid="uid://pbm1netkyiqy" path="res://addons/yard/editor_only/ui_scenes/main_view.gd" id="1_2b5h5"]
[ext_resource type="PackedScene" uid="uid://crnac01bnyk3" path="res://addons/yard/editor_only/ui_scenes/registry_view.tscn" id="2_2enek"]

[sub_resource type="DPITexture" id="DPITexture_2b5h5"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#ff5d5d\" d=\"M2 1v8.586l1.293-1.293a1 1 0 0 1 1.414 0L7 10.587l2.293-2.293a1 1 0 0 1 1.414 0L13 10.586l1-1V6H9V1H2zm8 0v4h4zm-6 9.414-2 2V15h12v-2.586l-.293.293a1 1 0 0 1-1.414 0L10 10.414l-2.293 2.293a1 1 0 0 1-1.414 0L4 10.414z\"/></svg>
"

[node name="MainView" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6
script = ExtResource("1_2b5h5")

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FileMenuButton" type="MenuButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "File"
switch_on_hover = true

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Settings"
flat = true

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RegistriesFilter" type="LineEdit" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Filter Registries "
right_icon = SubResource("DPITexture_2b5h5")

[node name="RegistriesList" type="ItemList" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"ItemListSecondary"
allow_reselect = true

[node name="RegistryView" parent="VBoxContainer/HSplitContainer" instance=ExtResource("2_2enek")]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 6.0

[connection signal="about_to_popup" from="VBoxContainer/HBoxContainer/FileMenuButton" to="." method="_on_file_menu_button_about_to_popup"]
[connection signal="text_changed" from="VBoxContainer/HSplitContainer/VBoxContainer/RegistriesFilter" to="." method="_on_registries_filter_text_changed"]
[connection signal="item_clicked" from="VBoxContainer/HSplitContainer/VBoxContainer/RegistriesList" to="." method="_on_registries_list_item_clicked"]
[connection signal="item_selected" from="VBoxContainer/HSplitContainer/VBoxContainer/RegistriesList" to="." method="_on_registries_list_item_selected"]
